--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>App</title>
+	<title>MindConnect</title>
 			<meta charset="UTF-8">
      		<meta name="viewport" content="width=device-width initial-scale=1">
             <title>Front Page</title>
@@ -13,11 +13,9 @@
             <link rel="stylesheet" href="/css/style.css">
             <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
             <script src="js/jquery.cycle2.min.js"></script>
-            <script type="text/javascript" src="js/app.js"></script>
+            <script type="text/javascript" src="js/main.js"></script>
 
-</head>
-<body>
- <header class="navbar">
+            <header class="navbar">
             <nav class="navbar-inverse navbar-static-top">
                 <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -28,13 +26,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="/">Brand</a>
+                  <a class="navbar-brand" href="/">MindConnect</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                    <li class="active"><a href="/users/register"><strong>Sign Up </strong><span class="sr-only">(current)</span></a></li>
+
+                  {{#if user}}
+                  <li class="active"><a href="#"><strong>Dashboard</strong><span class="sr-only"></span></a></li>
+                  {{else}}
+                    <li class="active"><a href="/users/register"><strong>Sign Up</strong><span class="sr-only"></span></a></li>
+                    {{/if}}
+
                     <li><a href="#"><strong>Link</strong></a></li>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
@@ -56,7 +60,16 @@
                     <button type="submit" class="btn btn-default">Submit</button>
                   </form>-->
                   <ul class="nav navbar-nav navbar-right">
+
+                  {{#if user}}
+                    <li><a href="/users/login"><strong>User Link</strong></a></li>
+
+                    <li><a href="/users/login"><strong>Sign Out</strong></a></li>
+
+                    {{else}}
                     <li><a href="/users/login"><strong>Sign In</strong></a></li>
+                    {{/if}}
+
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
                       <ul class="dropdown-menu">
