--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,11 @@
+<style>
+img {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    overflow: auto;
+}
+</style>
 <div class="cycle-slideshow" data-cycle-pause-on-hover='true'>
             <span class="cycle-prev">&#9001</span>
             <span class="cycle-next">&#9002</span>
