--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -5,97 +5,58 @@
 			<meta charset="UTF-8">
      		<meta name="viewport" content="width=device-width initial-scale=1">
             <title>Front Page</title>
-            <!-- Latest compiled and minified CSS -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+          <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+					<link rel="stylesheet" href="/css/style.css">
+						  <script src="/bower_components/jquery/dist/jquery.js"></script>
+           <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+					 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-            <!-- Optional theme -->
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-            <link rel="stylesheet" href="/css/style.css">
-            <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+					 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
             <script src="js/jquery.cycle2.min.js"></script>
             <script type="text/javascript" src="js/main.js"></script>
 
-            <header class="navbar navbar-default" >
-            <nav class="navbar-inverse navbar-static-top">
-                <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
+
+						<nav class="navbar navbar-default navbar-static-top">
+	      <div class="container">
                   <a class="navbar-brand" href="/">MindConnect</a>
-                </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
                     <li><a href="#"><strong>Link</strong></a></li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">Mindmap</a></li>
-                        <li><a href="#">Scheduler</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
                       </ul>
-                    </li>
-                  </ul>
-                  <!--<form class="navbar-form navbar-left">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                  </form>-->
+
+
+
                   <ul class="nav navbar-nav navbar-right">
+										  <li><a href="/users/register"><strong>Register</strong></a></li>
+
                   {{#if user}}
-									<li><a href="/mindmap"><strong>Mindmap</strong></a></li>
-                    <li><a href="/users/login"><strong>User Link</strong></a></li>
                     <li><a href="/users/logout"><strong>Sign Out</strong></a></li>
 
                     {{else}}
-                    <li><a href="/users/register"><strong>Sign Up</strong></a></li>
-										<li><a href="/users/login"><strong>Sign In</strong></a></li>
+                    <li><a href="/users/login"><strong>Sign In</strong></a></li>
                     {{/if}}
 
+										<li class="dropdown">
+	              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	              <ul class="dropdown-menu">
+	                <li><a href="/users/login">Action</a></li>
+	                <li><a href="#">Another action</a></li>
+	                <li><a href="#">Something else here</a></li>
+	                <li role="separator" class="divider"></li>
+	                <li class="dropdown-header">Nav header</li>
+	                <li><a href="#">Separated link</a></li>
+	                <li><a href="#">One more separated link</a></li>
+	              </ul>
+	            </li>
+						</ul>
+						</div>
+              </div>
+						</nav>
 
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
-              </div><!-- /.container-fluid -->
-            </nav>
-        </header>
-
-<div class="row">
-	<div class="col-lg-12">
-		{{#if success_msg}}
-<div class = "alert alert-success"> {{success_msg}}</div>
-{{/if}}
-
-{{#if error_msg}}
-<div class = "alert alert-danger"> {{error_msg}}</div>
-{{/if}}
-
-{{#if error}}
-<div class = "alert alert-danger"> {{error}}</div>
-{{/if}}
 
 {{{body}}}
-</div>
-</div>
+
 </body>
 </html>
