--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -64,7 +64,7 @@
                   {{#if user}}
                     <li><a href="/users/login"><strong>User Link</strong></a></li>
 
-                    <li><a href="/users/login"><strong>Sign Out</strong></a></li>
+                    <li><a href="/users/logout"><strong>Sign Out</strong></a></li>
 
                     {{else}}
                     <li><a href="/users/login"><strong>Sign In</strong></a></li>
