--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -12,6 +12,10 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
             <link rel="stylesheet" href="/css/style.css">
             <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+            <!-- Include all compiled plugins (below), or include individual files as needed -->
+            <script src="js/bootstrap.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
             <script src="js/jquery.cycle2.min.js"></script>
             <script type="text/javascript" src="js/main.js"></script>
 
@@ -34,7 +38,7 @@
                   <ul class="nav navbar-nav">
 
                   {{#if user}}
-                  <li class="active"><a href="#"><strong>Dashboard</strong><span class="sr-only"></span></a></li>
+                  <li class="active"><a href="/"><strong>Dashboard</strong><span class="sr-only"></span></a></li>
                   {{else}}
                     <li class="active"><a href="/users/register"><strong>Sign Up</strong><span class="sr-only"></span></a></li>
                     {{/if}}
