--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -30,7 +30,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
+									{{#if user}}
+									<a class="navbar-brand" href="/">Hello</a>
+{{else}}
                   <a class="navbar-brand" href="/">MindConnect</a>
+
+									{{/if}}
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,7 +43,7 @@
                   <ul class="nav navbar-nav">
 
                   {{#if user}}
-                  <li class="active"><a href="/"><strong>Dashboard</strong><span class="sr-only"></span></a></li>
+                  <li class="active"><a href="/users/profile"><strong>Dashboard</strong><span class="sr-only"></span></a></li>
                   {{else}}
                     <li class="active"><a href="/users/register"><strong>Sign Up</strong><span class="sr-only"></span></a></li>
                     {{/if}}
@@ -66,7 +71,16 @@
                   <ul class="nav navbar-nav navbar-right">
 
                   {{#if user}}
-                    <li><a href="/users/login"><strong>User Link</strong></a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">Mindmap</a></li>
+											<li><a href="#">Quiz</a></li>
+											<li><a href="#">Schedule</a></li>
+											<li role="separator" class="divider"></li>
+											<li><a href="#">Separated link</a></li>
+										</ul>
+									</li>
 
                     <li><a href="/users/logout"><strong>Sign Out</strong></a></li>
 
@@ -74,16 +88,8 @@
                     <li><a href="/users/login"><strong>Sign In</strong></a></li>
                     {{/if}}
 
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Dropdown </strong><span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                      </ul>
-                    </li>
+
+
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
